Добавление вкладок для разного функционала

--- a/MultipleCopyUtil/MainWindow.xaml
+++ b/MultipleCopyUtil/MainWindow.xaml
@@ -7,79 +7,85 @@
         mc:Ignorable="d"
         Title="Множественное копирование" Height="223" Width="492" ResizeMode="CanMinimize"
         Icon="/Images/Icons/copy-icon.ico">
-    <Grid>
-        <Button x:Name="Btn_ChooseDirectoryPath"
-                Content="Выбрать папки"
-                HorizontalAlignment="Left"
-                Margin="46,16,0,0"
-                VerticalAlignment="Top"
-                Height="24"
-                Width="113"
-                Cursor="Hand"
-                FontFamily="Palatino Linotype"
-                Click="Btn_ChooseDirectoryPath_Click" />
-        <Button x:Name="Btn_ChooseFilePath"
-                Content="Выбрать файлы"
-                HorizontalAlignment="Left"
-                Margin="46,54,0,0"
-                VerticalAlignment="Top"
-                Height="24"
-                Width="113"
-                Cursor="Hand"
-                FontFamily="Palatino Linotype"
-                Click="Btn_ChooseFilePath_Click" />
-        <Label x:Name="Lbl_ChooseDirectoryPath"
-               Content=""
-               HorizontalAlignment="Left"
-               Height="26"
-               Margin="162,16,0,0"
-               VerticalAlignment="Top"
-               Width="310"
-               FontFamily="Palatino Linotype" />
-        <Label x:Name="Lbl_ChooseFilePath"
-               Content=""
-               HorizontalAlignment="Left"
-               Height="26"
-               Margin="162,54,0,0"
-               VerticalAlignment="Top"
-               Width="310"
-               FontFamily="Palatino Linotype" />
-        <Button x:Name="Btn_CopyFileToDirectories"
-                Content="Копировать во все папки"
-                HorizontalAlignment="Left"
-                Margin="46,126,0,0"
-                VerticalAlignment="Top"
-                Height="42"
-                Width="176"
-                Cursor="Hand"
-                FontFamily="Palatino Linotype"
-                Click="Btn_CopyFileToDirectories_Click"
-                IsEnabled="False" />
-        <Button x:Name="Btn_ClearChoosedDirectoryPath"
-                Content="X"
-                HorizontalAlignment="Left"
-                Margin="18,16,0,0"
-                VerticalAlignment="Top"
-                Height="24"
-                Width="23"
-                Cursor="Hand"
-                FontFamily="Palatino Linotype"
-                Click="Btn_ClearChoosedDirectoryPath_Click" />
-        <Button x:Name="Btn_ClearChooseFilePath"
-                Content="X"
-                HorizontalAlignment="Left"
-                Margin="18,54,0,0"
-                VerticalAlignment="Top"
-                Height="24" Width="23"
-                Cursor="Hand"
-                FontFamily="Palatino Linotype"
-                Click="Btn_ClearChooseFilePath_Click" />
-        <CheckBox x:Name="Chk_OverwriteFile"
-                  Content="Перезаписать файлы, если существуют"
-                  HorizontalAlignment="Left"
-                  Margin="46,100,0,0"
-                  VerticalAlignment="Top"
-                  Width="247"
-                  FontFamily="Palatino Linotype" />
-    </Grid>
+    <TabControl TabStripPlacement="Left" Margin="0, 0, 0, 0">
+        <TabItem Name="copyTab" Header="Копирование">
+            <TabItem.Content>
+                <Grid>
+                    <Button x:Name="Btn_ChooseDirectoryPath"
+                            Content="Выбрать папки"
+                            HorizontalAlignment="Left"
+                            Margin="46,16,0,0"
+                            VerticalAlignment="Top"
+                            Height="24"
+                            Width="113"
+                            Cursor="Hand"
+                            FontFamily="Palatino Linotype"
+                            Click="Btn_ChooseDirectoryPath_Click" />
+                    <Button x:Name="Btn_ChooseFilePath"
+                            Content="Выбрать файлы"
+                            HorizontalAlignment="Left"
+                            Margin="46,54,0,0"
+                            VerticalAlignment="Top"
+                            Height="24"
+                            Width="113"
+                            Cursor="Hand"
+                            FontFamily="Palatino Linotype"
+                            Click="Btn_ChooseFilePath_Click" />
+                    <Label x:Name="Lbl_ChooseDirectoryPath"
+                           Content=""
+                           HorizontalAlignment="Left"
+                           Height="26"
+                           Margin="162,16,0,0"
+                           VerticalAlignment="Top"
+                           Width="310"
+                           FontFamily="Palatino Linotype" />
+                    <Label x:Name="Lbl_ChooseFilePath"
+                           Content=""
+                           HorizontalAlignment="Left"
+                           Height="26"
+                           Margin="162,54,0,0"
+                           VerticalAlignment="Top"
+                           Width="310"
+                           FontFamily="Palatino Linotype" />
+                    <Button x:Name="Btn_CopyFileToDirectories"
+                            Content="Копировать во все папки"
+                            HorizontalAlignment="Left"
+                            Margin="46,126,0,0"
+                            VerticalAlignment="Top"
+                            Height="42"
+                            Width="176"
+                            Cursor="Hand"
+                            FontFamily="Palatino Linotype"
+                            Click="Btn_CopyFileToDirectories_Click"
+                            IsEnabled="False" />
+                    <Button x:Name="Btn_ClearChoosedDirectoryPath"
+                            Content="X"
+                            HorizontalAlignment="Left"
+                            Margin="18,16,0,0"
+                            VerticalAlignment="Top"
+                            Height="24"
+                            Width="23"
+                            Cursor="Hand"
+                            FontFamily="Palatino Linotype"
+                            Click="Btn_ClearChoosedDirectoryPath_Click" />
+                    <Button x:Name="Btn_ClearChooseFilePath"
+                            Content="X"
+                            HorizontalAlignment="Left"
+                            Margin="18,54,0,0"
+                            VerticalAlignment="Top"
+                            Height="24" Width="23"
+                            Cursor="Hand"
+                            FontFamily="Palatino Linotype"
+                            Click="Btn_ClearChooseFilePath_Click" />
+                    <CheckBox x:Name="Chk_OverwriteFile"
+                              Content="Перезаписать файлы, если существуют"
+                              HorizontalAlignment="Left"
+                              Margin="46,100,0,0"
+                              VerticalAlignment="Top"
+                              Width="247"
+                              FontFamily="Palatino Linotype" />
+                </Grid>
+            </TabItem.Content>
+        </TabItem>
+    </TabControl>
 </Window>
