--- a/MultipleCopyUtil/Controls/RenameTab.xaml
+++ b/MultipleCopyUtil/Controls/RenameTab.xaml
@@ -7,7 +7,82 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <CheckBox Content="CheckBox in RenameTab" Margin="37,38,0,0"/>
-
+        <Grid Margin="10, 10, 0, 0">
+            <Button
+                x:Name="Btn_RemoveDirectoryPath"
+                Height="24"
+                Width="24"
+                Margin="10, 0, 0, 0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Content="X"
+                FontFamily="Palatino Linotype" />
+            <Button
+                x:Name="Btn_ChooseDirectoryPath"
+                Height="24"
+                Width="140"
+                Margin="40, 0, 0, 0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Content="Выбрать файлы/папки"
+                FontFamily="Palatino Linotype" />
+            <Label
+                Content="Файлы/папки не выбраны"
+                Margin="185, 0, 0, 0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                FontFamily="Palatino Linotype" />
+            <RadioButton
+                GroupName="FileDirectoryGroup"
+                Content="Папки"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Width="140"
+                Margin="40, 35, 0, 0"
+                FontFamily="Palatino Linotype"
+                IsChecked="True"/>
+            <RadioButton
+                GroupName="FileDirectoryGroup"
+                Content="Файлы"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Width="140"
+                Margin="40, 55, 0, 0"
+                FontFamily="Palatino Linotype" />
+        </Grid>
+        <Grid Margin="10, 160, 0, 0">
+            <RadioButton
+                x:Name=""
+                GroupName="RenameType"
+                Content="Добавить префикс"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Width="140"
+                Margin="0, 25, 0, 0"
+                FontFamily="Palatino Linotype" />
+            <TextBox
+                x:Name="myTextBox"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Width="140"
+                Margin="150, 25, 0, 0" 
+                FontFamily="Palatino Linotype" />
+            <RadioButton
+                GroupName="RenameType"
+                Content="Добавить постфикс"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Width="140"
+                Margin="0, 45, 0, 0"
+                FontFamily="Palatino Linotype"/>
+            <RadioButton
+                GroupName="RenameType"
+                Content="Замена"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Width="140"
+                Margin="0, 65, 0, 0"
+                FontFamily="Palatino Linotype" />
+        </Grid>
     </Grid>
 </UserControl>
